// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Employee page renders the page 1`] = `
Array [
  <h1
    className="MuiTypography-root MuiTypography-h1"
  >
    Add a new employee
  </h1>,
  <div
    className="makeStyles-loader"
  />,
]
`;

exports[`Create Employee page should display a loader and then an error message if the api is down 1`] = `
Array [
  <h1
    className="MuiTypography-root MuiTypography-h1"
  >
    Add a new employee
  </h1>,
  <div
    className="makeStyles-loader"
  />,
]
`;

exports[`Create Employee page should display a loader and then an error message if the api is down 2`] = `
Array [
  <h1
    className="MuiTypography-root MuiTypography-h1"
  >
    Add a new employee
  </h1>,
  <p
    className="MuiTypography-root no-data MuiTypography-body1"
  >
    An error occured and we could not get the Groups. Please try again by refreshing the page.
  </p>,
]
`;

exports[`Create Employee page should render a loader while fetching data and then display the data 1`] = `
Array [
  <h1
    className="MuiTypography-root MuiTypography-h1"
  >
    Add a new employee
  </h1>,
  <div
    className="makeStyles-loader"
  />,
]
`;

exports[`Create Employee page should render a loader while fetching data and then display the data 2`] = `
Array [
  <h1
    className="MuiTypography-root MuiTypography-h1"
  >
    Add a new employee
  </h1>,
  <form
    autoComplete="off"
    className="container"
    onSubmit={[Function]}
  >
    <mui-grid
      container={true}
      direction="column"
      spacing={2}
    >
      <mui-grid
        container={true}
        item={true}
        spacing={2}
      >
        <mui-grid
          item={true}
          sm={6}
        >
          <div
            className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          >
            <label
              className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-required MuiInputLabel-required"
              data-shrink={false}
            >
              Employee name
              <span
                className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 
                *
              </span>
            </label>
            <div
              className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
              onClick={[Function]}
            >
              <input
                aria-invalid={false}
                autoComplete="off"
                autoFocus={false}
                className="MuiInputBase-input MuiOutlinedInput-input"
                disabled={false}
                name="employee-name"
                onAnimationStart={[Function]}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={true}
                type="text"
                value=""
              />
              <fieldset
                aria-hidden={true}
                className="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              >
                <legend
                  className="PrivateNotchedOutline-legendLabelled"
                >
                  <span>
                    Employee name
                     *
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </mui-grid>
        <mui-grid
          item={true}
          sm={6}
        >
          <div
            className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          >
            <label
              className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled MuiFormLabel-required MuiInputLabel-required"
              data-shrink={true}
            >
              Employee group
              <span
                className="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 
                *
              </span>
            </label>
            <div
              className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
              onClick={[Function]}
            >
              <div
                aria-haspopup="listbox"
                aria-labelledby="mui-component-select-employee-group"
                className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                id="mui-component-select-employee-group"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                role="button"
                tabIndex={0}
              >
                Chemist
              </div>
              <input
                autoFocus={false}
                name="employee-group"
                onAnimationStart={[Function]}
                type="hidden"
                value={1}
              />
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden={true}
                className="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              >
                <legend
                  className="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
                >
                  <span>
                    Employee group
                     *
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </mui-grid>
      </mui-grid>
      <mui-grid
        item={true}
        sm={12}
      >
        <div
          className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
        >
          <label
            className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
            data-shrink={false}
          >
            Employee photo url
          </label>
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              autoComplete="off"
              autoFocus={false}
              className="MuiInputBase-input MuiOutlinedInput-input"
              disabled={false}
              name="employee-photo"
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="https://myimagedomain.com/grumpycat.jpg"
              required={false}
              type="text"
              value=""
            />
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                className="PrivateNotchedOutline-legendLabelled"
              >
                <span>
                  Employee photo url
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </mui-grid>
      <mui-grid
        item={true}
      >
        <mui-button
          color="primary"
          disableRipple={true}
          size="large"
          type="submit"
          variant="contained"
        >
          Create
        </mui-button>
      </mui-grid>
    </mui-grid>
  </form>,
]
`;
